# ring-nn

./: .gitignore  Cargo.toml  LICENSE  README.md  analyze.ipynb  app.py  data.py  main.py  nn.py  optimizer.py  requirements.txt  ring_nn.py  ring_nn_cifar10.py  ring_nn_higgs.py  ring_nn_mnist.py  tensor.py  test_ring_nn.py  torch_ring_nn_cifar10.py  torch_ring_nn_mnist.py  training.py  visualize_activations.ipynb  visualize_nn_activations.ipynb  visualize_nonlinearities.ipynb  wandb_mnist_sweep.py
nn_visualizer/: .gitignore  README.md  visualizer.html  visualizer.js
nn_visualizer/nn/: README.md  package-lock.json  package.json  tsconfig.json
nn_visualizer/nn/src/: index.ts  math.ts  nn.ts  serialization.ts  tensor.ts  types.ts
nn_visualizer/src/: visualizer.js  visualizer.ts
src/: fixed.rs  layer.rs  lib.rs  network.rs  ring.rs
src/data/: loader.rs  mod.rs
src/loss/: cross_entropy.rs  mod.rs  mse.rs
src/optimizer/: adam.rs  mod.rs  sgd.rs
src/visualization/: mod.rs
templates/: index.html
testing/2d/: 2d_run.rs  visualize_results.py
torch_based/: README.md  lib_ring_nn.py  lib_ring_nn2.py  ring_conv2d_cuda.cu  ring_conv2d_cuda2.cu  ring_conv2d_kernel.cuh  ring_conv2d_kernel2.cuh  ring_conv2d_simple_cuda.cu  ring_conv2d_simple_kernel.cuh  ring_nn_cifar10.py  ring_nn_mnist.py
visualization_tool/: README.md  app.js  chart-plugin.js  index.html  package.json  server.js  styles.css
