[package]
name = "ring-nn"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Loos <hi@jloos.de>"]
description = "A neural network implementation using ring topology"
license = "MIT"
repository = "https://github.com/JonasLoos/ring-nn"
readme = "README.md"
keywords = ["neural-network", "machine-learning", "ring-topology"]
categories = ["science", "algorithms"]

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

# Benchmark will be added later
# [[bench]]
# name = "network_benchmark"
# harness = false

[lib]
name = "ring_nn"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"
